<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">RedReader</string>
    <string name="firstrun_login_title">Log in</string>
    <string name="firstrun_login_message">You are not currently logged in. You can access the account list by selecting "Accounts" from the menu.</string>
    <string name="firstrun_login_button_now">Log in now</string>
    <string name="firstrun_login_button_later">Be anonymous</string>
    <string name="prefs_category_appearance">Appearance</string>
    <string name="prefs_category_behaviour">Behaviour</string>
    <string name="prefs_category_cache">Cache</string>
    <string name="prefs_category_menus">Menus</string>
    <string name="pref_appearance_theme_header">Theme</string>
    <string name="pref_appearance_thumbnails_header">Thumbnails</string>
    <string name="pref_appearance_comments_header">Comments</string>
    <string name="pref_appearance_twopane_key" translatable="false">pref_appearance_twopane</string>
    <string name="pref_appearance_twopane_title">Tablet mode (two pane)</string>
    <string name="pref_appearance_theme_key" translatable="false">pref_appearance_theme</string>
    <string name="pref_appearance_theme_title">Theme</string>
    <string name="pref_appearance_fontscale_posts_key" translatable="false">pref_appearance_fontscale_posts</string>
    <string name="pref_appearance_fontscale_posts_title">Post titles</string>
    <string name="pref_appearance_thumbnails_show_key" translatable="false">pref_appearance_thumbnails_show</string>
    <string name="pref_appearance_thumbnails_show_title">Show thumbnails</string>
    <string name="pref_appearance_thumbnails_nsfw_show_key" translatable="false">pref_appearance_thumbnails_nsfw_show</string>
    <string name="pref_appearance_thumbnails_nsfw_show_title">Show NSFW thumbnails</string>
    <string name="pref_appearance_thumbnails_wifionly_key" translatable="false">pref_appearance_thumbnails_wifionly</string>
    <string name="pref_appearance_thumbnails_wifionly_title">Thumbnails on Wi-Fi only</string>
    <string name="pref_appearance_comment_header_items_key" translatable="false">pref_appearance_comment_header_items</string>
    <string name="pref_appearance_comment_header_items_title">Comment header entries</string>
    <string name="pref_behaviour_notifications_key" translatable="false">pref_behaviour_notifications</string>
    <string name="pref_behaviour_notifications_title">Notifications</string>
    <string name="pref_behaviour_actions_post_header">Post Actions</string>
    <string name="pref_behaviour_actions_comment_header">Comment Actions</string>
    <string name="pref_behaviour_posts_header">Posts</string>
    <string name="pref_behaviour_fling_post_left_key" translatable="false">pref_behaviour_fling_post_left</string>
    <string name="pref_behaviour_fling_post_left_title">Fling left</string>
    <string name="pref_behaviour_fling_post_right_key" translatable="false">pref_behaviour_fling_post_right</string>
    <string name="pref_behaviour_fling_post_right_title">Fling right</string>
    <string name="pref_behaviour_actions_comment_tap_key" translatable="false">pref_behaviour_actions_comment_tap</string>
    <string name="pref_behaviour_actions_comment_tap_title">Press</string>
    <string name="pref_behaviour_nsfw_key" translatable="false">pref_behaviour_nsfw</string>
    <string name="pref_behaviour_nsfw_title">Show NSFW content</string>
    <string name="pref_cache_pruning">Cache Pruning</string>
    <string name="pref_cache_maxage_listing_key" translatable="false">pref_cache_maxage_listing</string>
    <string name="pref_cache_maxage_listing_title">Delete cached listings after</string>
    <string name="pref_cache_maxage_thumb_key" translatable="false">pref_cache_maxage_thumb</string>
    <string name="pref_cache_maxage_thumb_title">Delete cached thumbnails after</string>
    <string name="pref_cache_maxage_image_key" translatable="false">pref_cache_maxage_image</string>
    <string name="pref_cache_maxage_image_title">Delete cached images after</string>
	<string name="pref_cache_maxage_entry_key" translatable="false">pref_cache_maxage_entry</string>
	<string name="pref_cache_maxage_entry_title">Delete cached flags (read, upvoted, etc.) after</string>
    <string name="pref_cache_precache_images_header">Precache Images</string>
    <string name="pref_cache_precache_images_key" translatable="false">pref_cache_precache_images</string>
    <string name="pref_cache_precache_images_title">Precache images</string>
    <string name="pref_cache_precache_images_wifionly_key" translatable="false">pref_cache_precache_images_wifionly</string>
    <string name="pref_cache_precache_images_wifionly_title">Only on Wi-Fi</string>
    <string name="pref_menus_post_context_items_key" translatable="false">pref_menus_post_context_items_2</string>
    <string name="pref_menus_post_context_items_title">Action menu items</string>
    <string name="pref_menus_post_toolbar_items_key" translatable="false">pref_menus_post_toolbar_items</string>
    <string name="pref_menus_post_toolbar_items_title">Side-toolbar items</string>
    <string name="options_accounts">Accounts</string>
    <string name="options_accounts_long">Reddit Accounts</string>
    <string name="options_theme">Themes</string>
    <string name="options_settings">Settings</string>
    <string name="options_submit_post">Submit Post</string>
    <string name="options_refresh">Refresh</string>
    <string name="options_refresh_subreddits">Refresh Subreddits</string>
    <string name="options_refresh_posts">Refresh Posts</string>
    <string name="options_refresh_comments">Refresh Comments</string>
    <string name="options_past">Past Versions</string>
    <string name="options_past_posts">Past Post List Versions</string>
    <string name="options_past_comments">Past Comment List Versions</string>
    <string name="options_sort">Sort</string>
    <string name="options_sort_subreddits">Sort Subreddits</string>
    <string name="options_sort_posts">Sort Posts</string>
    <string name="options_sort_comments">Sort Comments</string>
    <string name="mainmenu_frontpage">Front Page</string>
	<string name="mainmenu_subscribed_posts">Subscribed Posts</string>
    <string name="mainmenu_all">All Posts</string>
    <string name="mainmenu_custom">Custom Subreddit</string>
    <string name="mainmenu_custom_invalid_name">Invalid subreddit name.</string>
    <string name="mainmenu_saved">Saved Posts</string>
    <string name="mainmenu_hidden">Hidden Posts</string>
    <string name="mainmenu_upvoted">Upvoted Posts</string>
    <string name="mainmenu_inbox">Inbox</string>
    <string name="mainmenu_profile">My Profile</string>
    <string name="mainmenu_header_subreddits">Subreddits</string>
    <string name="listing_cached">Viewing cached copy from %s</string>
    <string name="accounts_anon">Anonymous</string>
    <string name="accounts_active">Active</string>
    <string name="accounts_add">Add Reddit Account</string>
    <string name="accounts_setactive">Make Active</string>
    <string name="accounts_reauth">Reauthenticate</string>
    <string name="accounts_delete">Delete</string>
    <string name="accounts_loggingin">Logging in…</string>
    <string name="accounts_loggingin_msg">Just a moment…</string>
    <string name="accounts_username">Username</string>
    <string name="accounts_password">Password</string>
    <string name="accounts_login">Log in</string>
    <string name="accounts_delete_sure">Are you sure you want to delete this account?</string>
    <string name="sort_posts_hot">Hot</string>
    <string name="sort_posts_new">New</string>
    <string name="sort_posts_rising">Rising</string>
    <string name="sort_posts_controversial">Controversial</string>
    <string name="sort_posts_top">Top</string>
    <string name="sort_posts_top_hour">Top: This Hour</string>
    <string name="sort_posts_top_today">Top: Today</string>
    <string name="sort_posts_top_week">Top: This Week</string>
    <string name="sort_posts_top_month">Top: This Month</string>
    <string name="sort_posts_top_year">Top: This Year</string>
    <string name="sort_posts_top_all">Top: All Time</string>
    <string name="sort_comments_best">Best</string>
    <string name="sort_comments_hot">Hot</string>
    <string name="sort_comments_new">New</string>
    <string name="sort_comments_old">Old</string>
    <string name="sort_comments_controversial">Controversial</string>
    <string name="sort_comments_top">Top</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_go">Go</string>
    <string name="action_menu_post_title">Post Actions</string>
    <string name="action_upvote">Upvote</string>
    <string name="action_downvote">Downvote</string>
    <string name="action_vote_remove">Remove Vote</string>
    <string name="action_reply">Reply</string>
    <string name="subreddit_selection_textbox_hint">Subreddit</string>
    <string name="action_search">Search</string>
    <string name="options_subscribe">Subscribe</string>
    <string name="options_sidebar">View Sidebar</string>
    <string name="options_close_all">Close All</string>
    <string name="pin_subreddit">Pin to Main Menu</string>
    <string name="block_subreddit">Block Subreddit</string>
	<string name="pm_send_hint_recipient">Recipient</string>
	<string name="pm_send_hint_subject">Subject</string>
	<string name="pm_send_hint_message_text">Message text</string>
	<string name="pref_menus_appbar_sort_key" translatable="false">pref_menus_appbar_sort</string>
	<string name="pref_menus_appbar_refresh_key" translatable="false">pref_menus_appbar_refresh</string>
	<string name="pref_menus_appbar_past_key" translatable="false">pref_menus_appbar_past</string>
	<string name="pref_menus_appbar_submit_post_key" translatable="false">pref_menus_appbar_submit_post</string>
	<string name="pref_menus_appbar_pin_key" translatable="false">pref_menus_appbar_pin</string>
	<string name="pref_menus_appbar_block_key" translatable="false">pref_menus_appbar_block</string>
	<string name="pref_menus_appbar_subscribe_key" translatable="false">pref_menus_appbar_subscribe</string>
	<string name="pref_menus_appbar_sidebar_key" translatable="false">pref_menus_appbar_sidebar</string>
	<string name="pref_menus_appbar_accounts_key" translatable="false">pref_menus_appbar_accounts</string>
	<string name="pref_menus_appbar_theme_key" translatable="false">pref_menus_appbar_theme</string>
	<string name="pref_menus_appbar_settings_key" translatable="false">pref_menus_appbar_settings</string>
	<string name="pref_menus_appbar_close_all_key" translatable="false">pref_menus_appbar_close_all</string>
	<string name="pref_menus_appbar_reply_key" translatable="false">pref_menus_appbar_reply</string>
	<string name="pref_menus_appbar_search_key" translatable="false">pref_menus_appbar_search</string>
	<string name="dialog_continue">Continue</string>
	<string name="inline_preview_prompt_title">Image previews</string>
	<string name="inline_preview_prompt_message">Continue showing inline image previews like the one above? You can change this at any time in the settings.</string>
	<string name="inline_preview_prompt_turn_off">Turn off</string>
	<string name="inline_preview_prompt_keep_showing">Keep showing</string>
	<string name="reddit_terms_title">Reddit User Agreement</string>
	<string name="reddit_terms_message">RedReader accesses content using the Reddit API. To access Reddit, please read the terms and conditions at the link below, and confirm that you accept them.</string>
	<string name="reddit_terms_view_button">View Reddit User Agreement</string>
	<string name="terms_accept">Accept</string>
	<string name="terms_decline">Decline</string>
	<string name="post_submit_as_user">User</string>
</resources>