<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.appcompat.widget.LinearLayoutCompat
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<com.google.android.material.textview.MaterialTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:layout_marginTop="24dp"
				android:text="@string/reddit_terms_title"
				android:textSize="24sp" />

		<com.google.android.material.textview.MaterialTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:layout_marginTop="14dp"
				android:text="@string/reddit_terms_message"
				android:textSize="16sp" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/terms_button_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:layout_marginTop="14dp"
				android:textAllCaps="false"
				android:textColor="#18D"
				android:textSize="18sp"
				android:background="#0000"
				android:padding="16dp"
				android:text="@string/reddit_terms_view_button"
				tools:ignore="UnusedAttribute" />

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="24dp"
				android:layout_marginRight="24dp"
				android:layout_marginTop="14dp">

			<com.google.android.material.button.MaterialButton
					android:id="@+id/terms_button_decline"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					android:text="@string/terms_decline" />

			<com.google.android.material.button.MaterialButton
					android:id="@+id/terms_button_accept"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					android:text="@string/terms_accept" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
