<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of RedReader.
  ~
  ~ RedReader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RedReader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RedReader.  If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/inline_images_prompt_root"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:background="?rrListBackgroundCol">

	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:elevation="10dp"
			android:background="?rrListItemBackgroundCol"
			tools:ignore="UnusedAttribute">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="15dp">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/inline_preview_prompt_title"
					android:textSize="18sp"
					android:paddingBottom="4dp"
					android:textColor="?rrMainTextCol" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/inline_preview_prompt_message"
					android:textSize="14sp"
					android:paddingBottom="15dp"
					android:textColor="?rrMainTextCol" />

			<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<Button
						android:id="@+id/inline_preview_prompt_turn_off_button"
						style="@style/Widget.MaterialComponents.Button.TextButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/inline_preview_prompt_turn_off"
						android:textAllCaps="true"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintEnd_toStartOf="@id/inline_preview_prompt_keep_showing_button"/>

				<Button
						android:id="@+id/inline_preview_prompt_keep_showing_button"
						style="@style/Widget.MaterialComponents.Button.TextButton"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/inline_preview_prompt_keep_showing"
						android:textAllCaps="true"
						app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintEnd_toEndOf="parent"/>

			</androidx.constraintlayout.widget.ConstraintLayout>

		</LinearLayout>

	</FrameLayout>

</FrameLayout>
